--- a/.github/workflows/docker-builds.yml
+++ b/.github/workflows/docker-builds.yml
@@ -3,7 +3,7 @@ name: Build and publish the cfssl docker image
 on:
   push:
     tags:
-      - '*'
+      - 'v*.*.*'
     branches:
       - 's390x-multiarch'
 
@@ -39,6 +39,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64,linux/s390x
+          platforms: linux/amd64,linux/arm64,linux/s390x
           push: true
-          tags: shahid1984/cfssl:v1.0.0
+          tags: shahid1984/cfssl:${{ steps.cfssl.outputs.tag }}
