--- a/.github/workflows/docker-builds.yml
+++ b/.github/workflows/docker-builds.yml
@@ -41,4 +41,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/s390x
           push: true
-          tags: ${{ steps.cfssl.outputs.tag }}
+          tags: shahid1984/cfssl:${{ steps.cfssl.outputs.tag }}
